--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -333,6 +333,14 @@ footer {
     .row.padded {
         margin-bottom: 30px;
     }
+    
+    .row.padded-lots {
+        margin-bottom: 60px;
+    }
+    
+    .svg-wrapper {
+        margin: 30px 0px;
+    }
 
     a, p, h6 {
         color: $off-white;
